--- a/app/style/main.less
+++ b/app/style/main.less
@@ -231,6 +231,14 @@ figure.effect-marley:hover h2 {
   animation-fill-mode:forwards;
 }
 
+figure.effect-marley:hover img {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);filter:blur(2px);
+}
+
+
 figure.effect-marley p {
 	opacity: 0;
 	-webkit-transition: opacity 1s, -webkit-transform 1s;
