--- a/app/view/base/footer.html
+++ b/app/view/base/footer.html
@@ -39,7 +39,9 @@
     </div>
   </div>
   <div class="line"></div>
-  <div class="desc" style="margin-bottom: 5px; font-weight: 500;">Site Map | <a href="javascript:void(0);" data-dialog="website-privacy">Privacy Policy</a> | Terms and Conditions | <a href="/full-disclaimer" target="_blank">Our Fair Housing Pledge</a></div>
+  <div class="desc" style="margin-bottom: 5px; font-weight: 500;">
+    <!-- Site Map |  -->
+    <a href="javascript:void(0);" data-dialog="website-privacy">Privacy Policy</a> | <a href="javascript:void(0);" data-dialog="website-term">Terms and Conditions </a> | <a href="/full-disclaimer" target="_blank">Our Fair Housing Pledge</a></div>
   <div class="desc text-lighter" style="font-size: 14px;Color: #bd9e64">
      <a href="http://www.sothebys.com/en.html"  style="font-size: 14px;Color: #bd9e64" target="_blank">Visit the Sotheby’s Auction House</a>
   </div>
@@ -216,4 +218,115 @@
         </div>
       </div>
   </div>
+
+
+
+  <div id="website-term" class="dialog-wrapper" style="display: none;">
+      <div class="dialog-scroll">
+        <div class="dialog">
+          <div class="dialog-header">
+            <div class="dialog-close"><i class="fa fa-times"></i></div>
+          </div>
+          <div class="dialog-body">
+            <h2 class="footer-privacy-h2">TERMS AND CONDITIONS</h2>
+            <div class="footer-website-privacy">
+              <h4>
+                TERMS AND CONDITIONS <br>
+                (the “Terms and Conditions”)
+              </h4>
+              <div class="privacy-detail">
+                List International Realty Limited&nbsp;is committed to protecting and respecting your privacy. <br>
+                This policy (together with any other documents referred to in it) sets out the basis on which any personal data we collect from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data and how we will treat it. <br>
+                1. Information collection <br>
+                <span style="margin-left: 16px;display: inline-block;">1. In order to provide a better service to you, we may collect and process the following data about you: <br>
+                  (a) information that you provide by filling in forms on our website&nbsp;https://listsothebysrealtyhk.com&nbsp;(the “Site”). This includes information provided at the time of registering to use our Site, subscribing to our service, posting material or&nbsp;requesting further services. We may also ask you for information at other times, for example in connection with a promotion or when you report a problem with our Site;<br>
+                  (b) if you contact us, we may keep a record of that correspondence; <br>
+                  (c) we may also ask you to complete surveys that we use for research purposes, although you do not have to respond to them; <br>
+                  (d) details of transactions you carry out through our Site and of the fulfilment of your orders; <br>
+                  (e) details of your visits to our Site and the resources that you access. <br>
+                  (f) Name, Email, Contact Phone Number, Willingness to receive eDM (electronic distribution mail) <br>
+                  2. We only retain personal data for so long as it is necessary. Data may be archived as long as the purpose for which the data was used still exists. <br>
+                </span>                
+                2. Uses made of the information&nbsp;<br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  1. The purposes for which information may be used by us in and outside the Hong Kong Special Administrative Region&nbsp;include: <br>
+                  (a) ensuring that content from our Site is presented in the most effective manner for you and for your computer; <br>
+                  (b) providing you with alerts, promotion, event invitation and newsletter or information that you requested or signed up to; <br>
+                  (c) carrying out our obligations arising from any contracts entered into between you and us; <br>
+                  (d) allowing you to participate in interactive features of our service, when you choose to do so; <br>
+                  (e) designing and conducting surveys/questionnaires for client profiling/segmentation, statistical analysis, improving and furthering the provision our products and services; <br>
+                  (f) complying with laws and regulations applicable to us or any of our affiliates in or outside the Hong Kong Special Administrative Region; <br>
+                  (g) legal proceedings, including collecting overdue amounts and seeking professional advices; <br>
+                  (h) researching, designing and launching services or products including seminars/events/forums; <br>
+                  (i) promoting and marketing services and products subject to your exercise of the opt-out right (please see further details in Clause&nbsp;2.2&nbsp;below); or <br>
+                  (j) purposes directly related or incidental to the above. <br>
+                  2. We intend to use your data in direct marketing and we require your consent (which includes an indication of no objection) for that purpose. In this connection, please note that: <br>
+                  (a) your name, contact details (including address, contact number, email address), products and services information, transaction pattern and behaviour, background and demographic data held by us from time to time may be used by us in direct marketing; <br>
+                  (b) the following classes of services, products and subjects may be marketed in direct marketing: <br>
+                  (i) services and products related to our Site and/or our affiliates (including marketing affiliates programs we are a part of); <br>
+                  (ii) reward, loyalty or privileges programmes, promotional offers and related services; and <br>
+                  (iii)invitations to events such as seminars/webinars/tele-seminars, conferences, live programs or events. <br>
+                  (c) We may conduct direct marketing via fax, email, direct mail, telephone and other means of communication or send e-newsletters to you. You may choose not to receive promotional materials, by simply telling us (see below for contact details), and we will cease to do so, without charge. <br>
+                </span>
+                3. Disclosure of your information&nbsp;<br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  We will keep the personal data we hold confidential but may provide information to: <br>
+                  (a) personnel, agents, advisers, auditors, contractors, financial institutions, and service providers in connection with our operations or services; <br>
+                  (b) our overseas offices, affiliates, business partners and counterparts (if any); <br>
+                  (c) persons under a duty of confidentiality to us; <br>
+                  (d) persons to whom we are required to make disclosure under applicable laws and regulations in or outside the Hong Kong Special Administrative Region; or <br>
+                  (e) actual or proposed transferees or participants of our services in or outside the Hong Kong Special Administrative Region. <br>
+                </span>
+                4. Cookies&nbsp;<br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  1. Our website uses cookies to distinguish you from other users of our website. This helps us to provide you with a good experience when you browse our website and also allows us to improve our Site. By continuing to browse the Site, you are agreeing to our use of cookies. <br>
+                  2. A cookie is a small file of letters and numbers that we store on your browser or the hard drive of your computer if you agree. Cookies contain information that is transferred to your computer's hard drive. <br>
+                  3. We use the following cookies:&nbsp;<br>
+                  (a) Analytical/performance cookies. They allow us to recognise and count the number of visitors and to see how visitors move around our website when they are using it. This helps us to improve the way our website works, for example, by ensuring that users are finding what they are looking for easily.&nbsp;<br>
+                  4. Please note that third parties (including, for example, advertising networks and providers of external services like web traffic analysis services) may also use cookies, over which we have no control. These cookies are likely to be analytical/performance cookies or targeting cookies. <br>
+                  5. We may use the following third party web analytic services on the website. The service providers that administer these services use technologies such as cookies, web server logs and web beacons to help us analyse how visitors use the website. The information collected through these means (including IP address) is disclosed to these service providers, who use the information to evaluate use of the website.&nbsp;These analytic services may use the data collected to contextualise and personalise the marketing materials of their own advertising network. <br>
+                  Google Analytics <br>
+                  6. Google Analytics is a web analysis service provided by Google Inc. ("Google").&nbsp;Google's ability to use and share information collected by Google Analytics is in accordance with their policies:&nbsp;http://www.google.com/policies/privacy/partners/ <br>
+                  7. You can prevent Google's collection and processing of data by using the Google Ads Settings page or downloading and installing their browser plug-in (https://tools.google.com/dlpage/gaoptout). <br>
+                  8. You block cookies by activating the setting on your browser that allows you to refuse the setting of all or some cookies. However, if you use your browser settings to block all cookies (including essential cookies) you may not be able to access all or parts of our Site.&nbsp;<br>
+                  </span>
+                5. Security&nbsp;<br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  1. All information you provide to us is stored on our secure servers. Where we have given you (or where you have chosen) a password which enables you to access certain parts of our&nbsp;Site, you are&nbsp;responsible for keeping this password confidential. We ask you not to share a password with anyone. <br>
+                  2. Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect your personal data, we cannot guarantee the security of your data transmitted to our Site; any transmission is at your own risk. Once we have received your information, we will use strict procedures and security features to try to prevent unauthorised access. <br>
+                  </span>
+                6. Changes to our Privacy Policy <br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  Any changes we may make to our&nbsp;Privacy Policy&nbsp;in the future will be posted on this page. <br>
+                </span>
+                7. Data transfers <br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  We may hold your data on servers in&nbsp;Data is stored in the database which is hosted in Hong Kong and we use the collected information for promotion and advertising purposes&nbsp;and any other territories as we see fit from time to time. We may&nbsp;also transfer your data to our overseas offices or to any people listed at Clause 3 above, who may be located in or outside of the Hong Kong Special&nbsp;Administrative Region. <br>
+                </span>
+                8. Your consent and rights <br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  1. By using our service, making an application or visiting our website, you consent to the collection and use of your information and other activities as outlined in this policy. <br>
+                  2. Under the Hong Kong Personal Data (Privacy) Ordinance (the "Ordinance"), individuals have the right: <br>
+                  (a) to check whether we hold personal data about you and to access such data; <br>
+                  (b) to require us to correct as soon as reasonably practicable any data relating to you that is inaccurate; <br>
+                  (c) to ascertain our policies and practices in relation to personal data and the kind of personal data held by us; and <br>
+                  (d) to object to the use of your personal data for marketing purposes and we shall not use your personal data for marketing purposes after you communicate your objection to us. <br>
+                  3. You may exercise your opt-out right by notifying us if you wish to object to the use of your personal data for direct marketing purposes. Please send requests for such objections, access to data, correction of data, information regarding policies and practices and kinds of data held, questions or complaints to: <br>
+                  Name: Binoche Chan (COO of the Company) Address: 1/F, 33 Des Voeux Road Central, Hong Kong Tel: +852 3793 3688 Fax: +852 3579 4057 Email: info@listsirhk.com <br>
+                  4. In accordance with the terms of the Ordinance, we have the right to and may charge a reasonable fee for processing any data access request. <br>
+                  5. In the event that a User wishes to access or amend his or her personal information and data, the Company may request him or her to provide personal details in order to verify and confirm his or her identity. A HKID card number or passport number or business registration certificate number cannot be amended unless such data is proved to be inaccurate. The Company is required to respond to a User's request within&nbsp;seven (7)&nbsp;days&nbsp;of his or her request and will&nbsp;endeavor to do so wherever possible. <br>
+                  </span>
+                9. Governing law and jurisdiction&nbsp;<br>
+                <span style="margin-left: 16px;display: inline-block;">
+                  Nothing in this Privacy Policy shall limit the rights of the data subject under the Ordinance. This Privacy Policy shall be governed by the laws of the Hong Kong Special Administrative Region. You agree to submit to the exclusive jurisdiction of the Hong Kong courts. <br>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+
+
 </div>
