--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -30,7 +30,7 @@
               <div class="cover">
                 <div class="text-wrapper">
                   <h6>Unique Marketing Channels</h6>
-                  <p>A team of marketing experts could offer guidance and to propose a customized plan for a home that takes into consideration all avenues of marketing: print, digital, public relations, advertising and social media.</p>
+                  <p>A team of marketing experts could offer guidance and propose a customized plan for a home that takes into consideration all avenues of marketing: print, digital, public relations, advertising and social media.</p>
                   <a target="_blank" href="/marketing-property" class="button">MORE</a>
                 </div>
               </div>
@@ -56,7 +56,7 @@
               <div class="cover">
                 <div class="text-wrapper">
                   <h6>Auction House</h6>
-                  <p>Sotheby’s has been uniting collectors with world-class works of art.  Together, in the global markets our companies are able to collaborate to serve and to distinguishes our brand in a meaningful way.</p>
+                  <p>Sotheby’s has been uniting collectors with world-class works of art.  Together, in the global markets our companies are able to collaborate to serve and to distinguish our brand in a meaningful way.</p>
                   <a class="button" target="_blank" href="/brand-heritage">MORE</a>
                 </div>
               </div>
@@ -68,7 +68,7 @@
               <div class="cover">
                 <div class="text-wrapper">
                   <h6>Video</h6>
-                  <p>Expertly curated high-definition videography, we ensures an impeccable visual experience while exploring the world’s most extraordinary properties.</p>
+                  <p>Expertly curated high-definition videography, we ensure an impeccable visual experience while exploring the world’s most extraordinary properties.</p>
                   <a class="button" target="_blank" href="/video">MORE</a>
                 </div>
               </div>
