--- a/app/view/international/international.html
+++ b/app/view/international/international.html
@@ -20,7 +20,7 @@
       <a href="">International &gt;</a> 
       <a href="javascript:void(0);">{{property.urlName}}</a>
     </div>
-    <div style="padding-left: 8px;color: #858585;font-size: 12px;margin-top:18px;">
+    <div style="padding-left: 8px;color: #858585;font-size: 12px;margin-top:22px;">
       PROPERTY INFO
     </div>
     <a href="/international-list"> <button class="common-btn back-to-results">Back to Results</button></a>
@@ -45,7 +45,7 @@
   
   {% include "./gallery.html" %}
 
-  <div class="property-desc" style="margin-top: 40px;">
+  <div class="property-desc">
     <div class="row">
       <div class="col-md-8 col-sm-12">
         <div class="left-box">
@@ -214,6 +214,7 @@
             .enquiriy-request {
               margin:0 auto;
               text-align:center;
+              padding: 15px 0;
             }
             .enquiry-checkbox-area{
               position: absolute;
