--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   {% include "../base/header.html" %}
-  <div class="history-bg"></div>
+  <div class="history-bg-full-width">
+    <img src="/public/images/about/history.jpeg" alt="history">
+  </div>
   <div class="brand-heritage container" style="margin-top:40px;">
     <h1 class="text-center title-parg">Sotheby’s Heritage</h1>
     <p class="career-desc">
@@ -123,53 +125,8 @@
       }
     });
   </script>
-  <div class="history-mobile-view">
-    {% for item in history %}
-    <div class="mobile-history-box">
-      <div class="column-img">
-        <img src="{{item.img}}" alt="">
-      </div>
-      <div class="column-text">
-        <div class="title"><span class="year">{{item.year}}</span>&nbsp;{{item.title}}</div>
-        <p class="desc">{{item.desc|safe}}</p>
-      </div>
-    </div>
-    {% endfor %}
-  </div>
 
-  <div class="history-mobile-view">
-      {% for item in history %}
-      <div class="mobile-history-box">
-        <div class="column-img">
-          <img src="{{item.img}}" alt="">
-        </div>
-        <div class="column-text">
-          <div class="title"><span class="year">{{item.year}}</span>&nbsp;{{item.title}}</div>
-          <p class="desc">{{item.desc|safe}}</p>
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-    
-    <div class="brand-heritage-wrapper">  
-  
-      <div class="brand-heritage" >
-          <h1 class="text-center title-parg">Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
-          <div class="row">
-              <div class="col-md-6 col-xs-12"> <img src="/public/brand/realty.jpg"></div>
-              <div class="col-md-6 col-xs-12">   <p class="career-desc">
-                  Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
-              </p>
-              <p class="career-desc">
-                  The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.        
-              </p></div>
-              
-                  </div>
-  
-      
-      
-      </div>
-  </div>
+
   
     <div class="brand-heritage" style="margin-top: 40px;">
   
