--- a/app/view/about/contact-us.html
+++ b/app/view/about/contact-us.html
@@ -24,7 +24,7 @@
 
           <div class="item">
             <div class="img email"></div>
-            <label>info@listsirhk.com</label>
+            <label><a href="mailto:info@listsirhk.com" class="a-clear">info@listsirhk.com</a></label>
           </div>
 
           <div class="item">
@@ -190,7 +190,6 @@
                 }
               }
             });
-
             $('#submit-enquiry').click(function() {
               if($('#contact-us-form').valid()) {
                 var data = {
