--- a/app/view/buy/detail.html
+++ b/app/view/buy/detail.html
@@ -484,8 +484,11 @@
             <style>
            
               .enquiriy-request {
-                margin:0 auto;
-                text-align:center;
+                margin: 0 auto;
+                text-align: center;
+                padding: 15px 0;
+            }
+
               }
               .enquiry-checkbox-area{
                 position: absolute;
