--- a/app/view/about/csr.html
+++ b/app/view/about/csr.html
@@ -1,39 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSR</title>
   {% include "../base/base.html" %}
+  <script type="text/javascript">
+		var mrtse_url = 'https://www.onesothebysrealty.com/';
+		var theme_path = 'https://www.onesothebysrealty.com/wp-content/themes/onesir/';
+		var public_site = 'https://www.onesothebysrealty.com/';
+		var rel_path = 'https://www.onesothebysrealty.com/';
+		var isMobile;
+		jQuery(document).ready(function () { isMobile = (jQuery(window).width() <= 1024); });
+		function inIframe() { try { return window.self !== window.top; } catch (e) { return true; } }</script>
 </head>
+
 <body>
-  {% include "../base/header.html" %}
-  {% import "../base/forms.html" as forms %}
-  <div class="csr-bg"></div>
-  <div class="container" style="margin-top:40px;">
-    <h1 class="text-center title-parg">Corporate Social Responsibilities </h1>
-    <p class="career-desc" style="margin-bottom: 40px;">While we strive to maintain the strongest team to remain competitive in the property industry, it is not at the expense of our commitment to our staff and the wellbeing of our associates and how they impact the community. In providing a sound work environment with competitive benefits, we are proud to attract and retain an outstanding group of individuals with a true passion for what they do. As part of List Sotheby’s International Realty, we are honored to represent the best of the industry and anticipate future opportunities to give back to the local community. </p>
-  </div>
-  <div class="csr-contact">
-    <h2 class="title-h1">Contact Us</h2>
-    <div class="flex-box">
-      <div class="item">
-        <div class="img tel"></div>
-        <label>+852 3793 3688</label>
+  {% include "../base/header.html" %} {% import "../base/forms.html" as forms %}
+  <div class="csr-wrapper">
+    <div class="csr-wrapper-item">
+      <div class="o-smartimage">
+        <img src="/public/images/csr/csr-bg.jpg" style="max-width: none; max-height: none; min-width: 100%; min-height: 100%; width: 100%; height: auto;">
       </div>
 
-      <div class="item">
-        <div class="img email"></div>
-        <label>info@listsirhk.com</label>
-      </div>
-
-      <div class="item">
-        <div class="img address"></div>
-        <p class="address-desc">1/F,33 Des Voeux Road Central,<br>Central,Hong Kong</p>
-      </div>
+      <span class="s-title-on-image">
+        <h2>Transforming lives with safe homes</h2>
+        <img src="https://static-sothebys-production.akamaized.net/resources/v_4_3_0_7/siteresources/my folder/images/static_pages/newstory/landingpage_newstory_0000_vector_smart_object.png">
+      </span>
     </div>
+    <div class="container">
+      <h1 class="text-center title-parg">Partnership for good</h1>
+      <p class="career-desc">The Sotheby's International Realty? brand is proud to announce that it has partnered with New Story, a non-profit organization
+        that puts 100% of donations toward transforming dangerous living environments into communities of safe, sustainable
+        homes, for $6,000 a home.</p>
+      <p class="text-center">
+        <a class="common-btn" href="https://impact.newstorycharity.org/donations/new?collection_id=sotheby-s-international-realty"
+          style="width: 250px;display: inline-block;">Donate Now</a>
+      </p>
+
+      <p class="car-desc-remark career-desc text-center ">By clicking the links above you will be connected directly with New Story</p>
+
+    </div>
+    <div class="video-wrapper">
+      <iframe height="510" frameborder="0" src="https://www.wellcomemat.com/embed/jffdf7d22016bb4?hide_title=1" scrolling="no"
+        width="100%"></iframe>
+    </div>
+    <div class="mt30 text-center">
+
+      <h1 class="title-parg">
+        100% of your donation hire locals, buys materials, and builds a life changing home.</h1>
+
+    </div>
+    <div class="csr-wrapper-item">
+      <div class="s-title-smartimage image-holder">
+        <img src="../public/images/csr/localimagereader01.png">
+
+
+      </div>
+      <span class="s-title-on-image-sec">
+        <h2>
+          Everything Starts With A Home
+        </h2>
+        <span class="s-text">A safe home for $6,000 provides the foundation for health, education, and opportunity.</span>
+      </span>
+
+
+    </div>
+    <div class="mt30 text-center">
+
+      <h1 class="title-parg">Receive a video as the family you help moves into their new home.</h1>
+      <p></p>
+
+    </div>
+    <div class="csr-wrapper-item ">
+      <div class="s-title-smartimage image-holder">
+        <img src="../public/images/csr/localimagereader02.png">
+
+
+      </div>
+      <span class="s-title-on-image-sec">
+        <h2 style="color:white">DIRECT IMPACT</h2>
+        <span class="s-text" style="color:#fff;background-color:rgba(255,255,255,0)">Meet the
+          <a href="https://impact.newstorycharity.org/families/yphonise-guillaume">Guillaume family from Haiti</a>, the recipients
+          <br>of the Sotheby's International Realty brand donation.</span>
+      </span>
+
+
+    </div>
+    <div class="container">
+      <h1 class="text-center title-parg">GET INVOLVED</h1>
+      <p class="career-desc">On a daily basis, we see the importance of home ownership in our client's lives. We feel everyone should have that
+        security and sense of peace.</p>
+      <p class="text-center">
+        <a class="common-btn" href="https://impact.newstorycharity.org/donations/new?collection_id=sotheby-s-international-realty"
+          style="width: 250px;display: inline-block;">Donate Now</a>
+      </p>
+
+      <p class="car-desc-remark career-desc text-center ">By clicking the links above you will be connected directly with New Story</p>
+
+    </div>
+
+
+
+
+
   </div>
+
   {% include "../base/footer.html" %}
 </body>
+
 </html>
