--- a/app/view/about/csr.html
+++ b/app/view/about/csr.html
@@ -32,9 +32,8 @@
     </div>
     <div class="container">
       <h1 class="text-center title-parg">Partnership for good</h1>
-      <p class="career-desc">The Sotheby's International Realty? brand is proud to announce that it has partnered with New Story, a non-profit organization
-        that puts 100% of donations toward transforming dangerous living environments into communities of safe, sustainable
-        homes, for $6,000 a home.</p>
+      <p class="career-desc">The Sotheby's International Realty® brand is proud to announce that it has partnered with New Story, a non-profit organization that puts 100% of donations toward transforming dangerous living environments into communities of safe, sustainable homes, for $6,000 a home.
+      </p>
       <p class="text-center">
         <a class="common-btn" href="https://impact.newstorycharity.org/donations/new?collection_id=sotheby-s-international-realty"
           style="width: 250px;display: inline-block;">Donate Now</a>
