--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -18,7 +18,7 @@
     <div class="right-corner">Countryside, used with permission</div>
   </div>
   <div class="marketing-home-wrapper">
-      <span class="text-center title-parg">MARKETING YOUR HOME</span>
+      <span class="text-center title-parg">Marketing Your Home</span>
     <p class="career-desc"style="padding:0 15px 20px;">
         Our sales and marketing strategy is all about making impressions worldwide. It’s about creating global connections and establishing true consumer engagement. We achieve these through a series of all-round advertising and promotional channels and backed by a solid team of professional sales associate and marketing experts.  
     </p>
