--- a/app/view/home/buy-rent.html
+++ b/app/view/home/buy-rent.html
@@ -98,8 +98,9 @@
       <form id="list_property_form" onsubmit="return false;">
         <div class="row">
           <div class="col-md-12 text-center title-h1">
-           LIST YOUR PROPERTY
+            List Your Property
           </div>
+          <p class="mb30">With our innovative marketing tools, we can make your treasured property distinctive with our unparalleled connection to the luxury property market. Let our professional sales associates begin the journey and connect you with the group of potential clients. List your property with us today!</p>
         </div>
         <div class="row">
           <div class="col-md-2 col-sm-6 col-xs-12">
