--- a/app/view/about/marketing-property.html
+++ b/app/view/about/marketing-property.html
@@ -7,7 +7,7 @@
   <title>Marketing Your Property</title>
   {% include "../base/base.html" %}
 </head>
-<body>
+<body ontouchstart>
   {% include "../base/header.html" %}
   <!-- <div class="container" style="margin-top: 30px; margin-bottom: 25px; max-width: 730px;">
     <h1 class="text-center">Marketing Your Property</h1>
