--- a/app/view/search/list-property.html
+++ b/app/view/search/list-property.html
@@ -15,7 +15,7 @@
       <a href="/">Home ></a>
       <a href="#">List Your Property</a>   
     </div>
-    <h1 class="title-parg text-center">List Your Property</h1>
+    <h1 style="margin-top: 40px;" class="title-parg text-center">List Your Property</h1>
     <p class="career-desc mb30">
       With our innovative marketing tools, we can make your treasured property distinctive with our unparalleled connection to the luxury property market. Let our professional sales associates begin the journey and connect you with the group of potential clients. List your property with us today!
     </p>
