--- a/app/view/about/marketing-your-home.html
+++ b/app/view/about/marketing-your-home.html
@@ -39,7 +39,15 @@
 				<h2 class="marketing-sub-title"></h2>
                 <section class="wide-content"><p class="p1"></p><p class="p1"></p></section>				
                 <div class="tabbed-content">
-
+						<style>
+								.move-image:hover img{
+								-webkit-filter: blur(2px);
+								-moz-filter: blur(2px);
+								-o-filter: blur(2px);
+								-ms-filter: blur(2px);
+								filter:blur(2px);
+							  }
+							</style>
 					<div class="tab selected print condo-list">
 					        <figure class="move-image selected print">
                                 <img src="/public/marketing-your-home/pic/01.jpg" alt="List Sotheby's International Realty" class="img-replace">
