update contact us

--- a/app/view/about/contact-us.html
+++ b/app/view/about/contact-us.html
@@ -209,7 +209,7 @@
                   method: 'post',
                   data: data,
                   dataType: 'json',
-                  url: 'https://www.listsothebysrealtyhk.com/api/enquiry/',
+                  url: 'http://192.168.5.51:18000/api/enquiry/',
                   success: function() {
                     G.mNotic('Sent Successfully');
                     $('input[name="name"]').val('');
