recovert brand content

--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -127,6 +127,26 @@
   </script>
 
 
+
+<div class="brand-heritage-wrapper">
+  
+        <div class="brand-heritage" >
+            <h1 class="text-center title-parg">Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
+            <div class="row">
+                <div class="col-md-6 col-xs-12"> <img src="/public/brand/realty.jpg"></div>
+                <div class="col-md-6 col-xs-12">   <p class="career-desc">
+                    Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more thantwo centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive propertiesit represents.
+                </p>
+                <p class="career-desc">
+                    The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.
+                </p></div>
+  
+                    </div>
+  
+  
+  
+        </div>
+   </div>
   
     <div class="brand-heritage" style="margin-top: 40px;">
   
